--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
 body {
-  
+  background-color: #f5f5f2;
+}
+
+.title{
+  background-color: white;
+  padding-top: 25px;
+  padding-bottom: 15px;
+}
+
+.spotify{
+  text-align: center;
+}
+
+#search-music:focus{
+  outline: #5bc0de solid thin;
+  border-radius: 2px
 }
