--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,81 @@ body {
   outline: #5bc0de solid thin;
   border-radius: 2px
 }
+
+.image{
+  width: 200px;
+  height: auto;
+}
+
+
+audio::-webkit-media-controls-mute-button{
+  background-color: rgba(255,255,255, 0);
+  color: white;
+}
+audio::-webkit-media-controls-play-button {
+  background-color: rgba(255,255,255, 0);
+  color: white;
+}
+
+audio::-webkit-media-controls-timeline {
+  background-color: white;
+  width: 100%;
+  height: 5px;
+
+}
+
+audio::-webkit-media-controls-panel {
+  border: solid #000 1px;
+  background-color: #000;
+  border-radius: 10px;
+}
+
+audio::-webkit-media-controls-current-time-display, audio::-webkit-media-controls-time-remaining-display {
+  background-color: black;
+  color: white;
+}
+
+audio::-webkit-media-controls-volume-slider{
+  background-color: white;
+}
+
+audio::-webkit-slider-thumb{
+  background-color: green;
+}
+
+
+
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 10px 0;
+  width: 100%;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 12.8px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  background: gray;
+  border-radius: 25px;
+  border: 0px solid #000;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  border: 0px solid #000;
+  height: 20px;
+  width: 39px;
+  border-radius: 7px;
+  background: white;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -3.6px;
+  color: green;
+
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: gray;
+}
