--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,18 @@ body {
   height: auto;
 }
 
+.song{
+  margin: 20px;
+}
 
+.artist{
+  margin: 1px 5px ;
+}
+
+.music{
+  margin: 1px;
+  margin-bottom: 20px;
+}
 audio::-webkit-media-controls-mute-button{
   background-color: rgba(255,255,255, 0);
   color: white;
